# aprsrover

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml  setup.py
.github/: copilot-instructions.md
docs/: aprs.md  building.md  compass.md  dht.md  gps.md  hw_info.md  neopixel.md  servo.md  switch.md  testing.md  tracks.md  ultra.md
examples/: README.md  aprs_gps_tracks_integration.py  aprs_send_message_on_arrival.py
examples/aprs/async/dummy/: README.md  example_aprs_get_my_message.py  example_aprs_observer.py  example_aprs_send_async.py  example_aprs_send_compressed_position_report.py  example_aprs_send_my_message_no_ack.py  example_aprs_send_object_report.py  example_aprs_send_position_report.py  example_aprs_send_status_report.py
examples/aprs/async/real/: README.md
examples/aprs/sync/dummy/: example_aprs_ack.py  example_aprs_clear_observers.py  example_aprs_get_my_message.py  example_aprs_observer.py  example_aprs_send.py  example_aprs_send_my_message_no_ack.py  example_aprs_send_my_message_with_ack.py  example_aprs_send_object_report.py  (+3 more)
examples/dummies/: __init__.py  aprs.py  compass.py  dht.py  gps.py  hw_info.py  neopixel.py  pwm.py  switch.py  tracks.py  ultra.py
examples/integration/: aprs_gps_tracks_integration.py
src/aprsrover/: __init__.py  aprs.py  compass.py  dht.py  gps.py  hw_info.py  neopixel.py  servo.py  switch.py  tracks.py  ultra.py
tests/: test_aprs.py  test_compass.py  test_dht.py  test_gps.py  test_hw_info.py  test_neopixel.py  test_servo.py  test_switch.py  test_tracks.py  test_ultra.py
(+48 files in other folders)
