[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aprsrover"
version = "0.2.0"
description = "Python library for APRS Rover utilities: APRS messaging, GPS, and rover track control."
readme = "README.md"
authors = [
    { name = "5B4AON" }
]
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.10"
dependencies = [
    "gpsd-py3",
    "Adafruit-PCA9685",
    "kiss3",
    "ax253"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries"
]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # lint.isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # bugbear
]
lint.ignore = [
    "E203",  # Whitespace before ':', handled by black
    "E501",  # Line too long, handled by black
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = ["aprsrover"]

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/tests/*"
]
